# license-gen-cli

./: Cargo.toml  LICENSE.MIT  README.md  VERSION.toml  sonar-project.properties
.cargo/: config.toml
.github/workflows/: audit.yml  check.yml  release.yml
license/: Cargo.toml
license/src/: cli.rs  io.rs  lib.rs  license.rs  main.rs
license/src/texts/: bsd.rs  cddl.rs  gnu.rs  mpl.rs
license/tests/: license_tests.rs
license/tests/data/: __init__.py
src/: io.rs  license.rs  main.rs
src/texts/: apache.rs  bsd.rs  bsl.rs  cddl.rs  epl.rs  gnu.rs  mit.rs  mod.rs  mpl.rs  unlicense.rs
tests/data/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
