[package]
name = "license-gen-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "string"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = [
  "tracing",
] }
color-print = "0.3.7"
handlebars = "6.3.2"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
