[workspace]
resolver = "3"
members = ["license", "xtask"]
default-members = ["license"]

[workspace.dependencies]
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "std",
  "registry",
] }
clap = { version = "4.5.42", features = ["derive", "string"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = [
  "tracing",
] }
color-print = "0.3.7"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
