[package]
name = "license-gen-bin"
version = "1.0.0"
edition = "2024"
authors = ["Annie Ehler <annie.ehler.4@gmail.com>"]
description = "A command line tool for generating license files."
documentation = "https://github.com/annie444/license-gen-cli"
readme = "README.md"
homepage = "https://github.com/annie444/license-gen-cli"
repository = "https://github.com/annie444/license-gen-cli"
license = "MIT OR Apache-2.0"
keywords = ["license", "generator", "command line", "tool"]
categories = ["command-line-utilities", "development-tools", "config"]
include = ["src/**", "README.md", "LICENSE"]
default-run = "license"
autobins = false

[[bin]]
name = "license"
path = "src/main.rs"

[[test]]
name = "license_tests"
path = "tests/license_tests.rs"

[dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
color-print.workspace = true
handlebars = "6.3.2"
serde.workspace = true
tempfile = "3.20.0"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
rexpect = "0.6.2"
