[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
current_platform = "0.2.0"
license-gen-bin = { path = "../license" }
clap.workspace = true
clap-verbosity-flag.workspace = true
color-print.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
clap_complete = { version = "4.5.55", features = ["debug"] }
clap_mangen = { version = "0.2.28", features = ["debug"] }
devx-cmd = "0.5.0"
devx-pre-commit = "0.5.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }
tar = "0.4.44"
num_cpus = "1.17.0"
sha2 = "0.10.9"
ctrlc = "3.4"
